--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Eventually by HTML5 UP</title>
+		<title>Eventually </title>
 		<meta charset="utf-8" />
 		
-		<!--<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />-->
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -21,7 +21,7 @@
 			<header id="header">
 				<h1>Eventually</h1>
 				<p>A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+				your next big thing. <!--Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>-->
 			</header>
 
 		<!-- Signup Form -->
