--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">Pavani Alam</a></h1>
+					<h1 id="logo"><a href="index.html"></a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
@@ -59,10 +59,10 @@
 					<div class="inner">
 
 						<header>
-							<h2>TWENTY</h2>
+							<h2>Pavani Alam</h2>
 						</header>
-						<p>This is <strong>Twenty</strong>, a free
-						<br />
+						<p> a free
+						<!--<br />-->
 						responsive template
 						<br />
 						by <a href="http://html5up.net">HTML5 UP</a>.</p>
