--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 					-->
 					<div class="inner">
 
-						<header>
+					<!--	<header>-->
 							<h3>Pavani Alam</h3>
-						</header>
+						<!--</header>-->
 						<p> a free
 						<!--<br />-->
 						responsive template
