--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 					-->
 					<div class="inner">
 
-					<!--	<header>-->
-							<h2>Pavani Alam</h2>
-						<!--</header>-->
+					<header>
+							<h3>Pavani Alam</h3>
+						</header>
 						<p> a free
 						<!--<br />-->
 						responsive template
