--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 									</p>
 								</section>
 								<section>
-									<span class="icon major fa-lock"></span>
+									<span class=""></span>
 									  <h3>Steps</h3>
 									    <p><!DOCTYPE html>
 									      <html>
