--- a/index.html
+++ b/index.html
@@ -91,36 +91,39 @@
 							<p>Using the HTML5 references to draw graphics via scripting (usually JavaScript).</p>
 							<div class="features">
 								<section>
-									<span class="icon major fa-code"></span>
-									<h3>Chess board</h3>
-									<p><!DOCTYPE html>
-										<html>
-											<body>
-											<canvas id="myCanvas" width="200" height="200" style="border:1px solid #d3d3d3;">
-											Your browser does not support the HTML5 canvas tag.</canvas>
-											<script>
-												var c = document.getElementById("myCanvas");
-												var ctx = c.getContext("2d");
-												var size = 20;
-												for(var i = 0; i < 10; i=i+2) {
-												  for(var j = 0; j < 10; j=j+2){
-												    ctx.fillStyle="blue";
-												    ctx.fillRect(size*j, size*i, size, size);
-												    ctx.fillRect(size*(i+1), size*(j+1), size, size);
-												    ctx.fillStyle="pink";
-												    ctx.fillRect(size*(j+1), size*i, size, size);
-												    ctx.fillRect(size*(i), size*(j+1), size, size);
-												  }
-												}
-											</script>
-											</body>
-										</html>
-									</p>
+									<div>
+										<span class="icon major fa-code"></span>
+										<h3>Chess board</h3>
+										<p><!DOCTYPE html>
+											<html>
+												<body>
+												<canvas id="myCanvas" width="200" height="200" style="border:1px solid #d3d3d3;">
+												Your browser does not support the HTML5 canvas tag.</canvas>
+												<script>
+													var c = document.getElementById("myCanvas");
+													var ctx = c.getContext("2d");
+													var size = 20;
+													for(var i = 0; i < 10; i=i+2) {
+													  for(var j = 0; j < 10; j=j+2){
+														ctx.fillStyle="blue";
+														ctx.fillRect(size*j, size*i, size, size);
+														ctx.fillRect(size*(i+1), size*(j+1), size, size);
+														ctx.fillStyle="pink";
+														ctx.fillRect(size*(j+1), size*i, size, size);
+														ctx.fillRect(size*(i), size*(j+1), size, size);
+													  }
+													}
+												</script>
+												</body>
+											</html>
+										</p>
+									</div>
 								</section>
 								<section>
+								<div>
 									<span class="icon major fa-lock"></span>
-									  <h3>Steps</h3>
-									    <p><!DOCTYPE html>
+									<h3>Steps</h3>
+									<p><!DOCTYPE html>
 									      <html>
 												<body>
 												 <canvas id="myCanvas" width="200" height="200" style="border:1px solid #d3d3d3;">
@@ -136,78 +139,85 @@
 												  </script>
 											   </body>
 									     </html>
-									  </p>
+									</p>
+								</div>	  
 								</section>
 								<section>
-									<span class="icon major fa-cog"></span>
-									<h3>Cross shape</h3>
-									<p><!DOCTYPE html>
-										<html>
-											<body>
-												<canvas id="myCanvas" width="200" height="200" style="border:1px solid #d3d3d3;">
-												Your browser does not support the HTML5 canvas tag.</canvas>
-												<script>
-													var c = document.getElementById("myCanvas");
-													var ctx = c.getContext("2d");
-													var size = 20;
-													for(var i = 0; i < 10; i=i+1) {
-														ctx.fillRect(180-(size*i), size*i, size, size);
-														ctx.fillRect(180-(size*i), 180-(size*i), size, size);	
-													}
-												</script>
-											</body>
-										</html>
-									</p>
+								  <div>
+										<span class="icon major fa-cog"></span>
+										<h3>Cross shape</h3>
+										<p><!DOCTYPE html>
+											<html>
+												<body>
+													<canvas id="myCanvas" width="200" height="200" style="border:1px solid #d3d3d3;">
+													Your browser does not support the HTML5 canvas tag.</canvas>
+													<script>
+														var c = document.getElementById("myCanvas");
+														var ctx = c.getContext("2d");
+														var size = 20;
+														for(var i = 0; i < 10; i=i+1) {
+															ctx.fillRect(180-(size*i), size*i, size, size);
+															ctx.fillRect(180-(size*i), 180-(size*i), size, size);	
+														}
+													</script>
+												</body>
+											</html>
+										</p>
+								  </div>	
 								</section>
 								<section>
-									<span class="icon major fa-desktop"></span>
-									<h3>Colorful borders</h3>
-									<p><!DOCTYPE html>
-										<html>
-											<body>
-												<canvas id="myCanvas" width="200" height="200" style="border:1px solid #d3d3d3;">
-												Your browser does not support the HTML5 canvas tag.</canvas>
-												<script>
-													var c = document.getElementById("myCanvas");
-													var ctx = c.getContext("2d");
-													var size = 20;
-													for(var i = 0; i < 10; i=i+1) {
-														ctx.fillStyle="blue";
-														ctx.fillRect(size*2*i,0,size,size);
-														ctx.fillStyle="aqua";
-														ctx.fillRect(0,size*2*i,size,size);
-														ctx.fillStyle="gold";
-														ctx.fillRect(size*2*i,180,size,size);
-														ctx.fillStyle="purple";
-														ctx.fillRect(180,size*2*i,size,size);
-														
-													}
-												</script>
-											</body>
-										</html>
-									</p>
+								  <div>
+										<span class="icon major fa-desktop"></span>
+										<h3>Colorful borders</h3>
+										<p><!DOCTYPE html>
+											<html>
+												<body>
+													<canvas id="myCanvas" width="200" height="200" style="border:1px solid #d3d3d3;">
+													Your browser does not support the HTML5 canvas tag.</canvas>
+													<script>
+														var c = document.getElementById("myCanvas");
+														var ctx = c.getContext("2d");
+														var size = 20;
+														for(var i = 0; i < 10; i=i+1) {
+															ctx.fillStyle="blue";
+															ctx.fillRect(size*2*i,0,size,size);
+															ctx.fillStyle="aqua";
+															ctx.fillRect(0,size*2*i,size,size);
+															ctx.fillStyle="gold";
+															ctx.fillRect(size*2*i,180,size,size);
+															ctx.fillStyle="purple";
+															ctx.fillRect(180,size*2*i,size,size);
+															
+														}
+													</script>
+												</body>
+											</html>
+										</p>
+								  </div>	
 								</section>
 								<section>
-									<span class="icon major fa-chain"></span>
-									<h3>V shape</h3>
-									<p><!DOCTYPE html>
-										<html>
-											<body>
-												<canvas id="myCanvas" width="200" height="100" style="border:1px solid #d3d3d3;">
-												Your browser does not support the HTML5 canvas tag.</canvas>
-												<script>
-													var c = document.getElementById("myCanvas");
-													var ctx = c.getContext("2d");
-													var size=20;
-													for(var i = 0; i < 5; i=i+1) {
-														ctx.fillStyle="blue";
-														ctx.fillRect(size*i, size*i, size, size);
-														ctx.fillRect(180-(size*i), size*i, size, size); 
-													}
-												</script>
-											</body>
-										</html>
-									</p>
+								  <div>
+										<span class="icon major fa-chain"></span>
+										<h3>V shape</h3>
+										<p><!DOCTYPE html>
+											<html>
+												<body>
+													<canvas id="myCanvas" width="200" height="100" style="border:1px solid #d3d3d3;">
+													Your browser does not support the HTML5 canvas tag.</canvas>
+													<script>
+														var c = document.getElementById("myCanvas");
+														var ctx = c.getContext("2d");
+														var size=20;
+														for(var i = 0; i < 5; i=i+1) {
+															ctx.fillStyle="blue";
+															ctx.fillRect(size*i, size*i, size, size);
+															ctx.fillRect(180-(size*i), size*i, size, size); 
+														}
+													</script>
+												</body>
+											</html>
+										</p>
+								  </div>	
 								</section>
 								<section>
 									<span class="icon major fa-diamond"></span>
