changing canavas id

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
 										<span class="icon major fa-lock"></span>
 										<h3>Steps</h3>
 										<p>
-											<canvas id="myCanvas" width="200" height="200" style="border:1px solid #d3d3d3;">
+											<canvas id="myCanvas1" width="200" height="200" style="border:1px solid #d3d3d3;">
 												Your browser does not support the HTML5 canvas tag.</canvas>
 													   <script>
-															var c1 = document.getElementById("myCanvas");
+															var c1 = document.getElementById("myCanvas1");
 															var ctx1 = c1.getContext("2d");
 															var size = 20;
 														   for(var i = 0; i < 10; i=i+1) {
@@ -140,10 +140,10 @@
 										<span class="icon major fa-cog"></span>
 										<h3>Cross shape</h3>
 										<p>
-											<canvas id="myCanvas" width="200" height="200" style="border:1px solid #d3d3d3;">
+											<canvas id="myCanvas2" width="200" height="200" style="border:1px solid #d3d3d3;">
 													Your browser does not support the HTML5 canvas tag.</canvas>
 													<script>
-														var c2 = document.getElementById("myCanvas");
+														var c2 = document.getElementById("myCanvas2");
 														var ctx2 = c2.getContext("2d");
 														var size = 20;
 														for(var i = 0; i < 10; i=i+1) {
@@ -160,10 +160,10 @@
 										<span class="icon major fa-desktop"></span>
 										<h3>Colorful borders</h3>
 										<p>
-													<canvas id="myCanvas" width="200" height="200" style="border:1px solid #d3d3d3;">
+													<canvas id="myCanvas3" width="200" height="200" style="border:1px solid #d3d3d3;">
 													Your browser does not support the HTML5 canvas tag.</canvas>
 													<script>
-														var c3 = document.getElementById("myCanvas");
+														var c3 = document.getElementById("myCanvas3");
 														var ctx3 = c3.getContext("2d");
 														var size = 20;
 														for(var i = 0; i < 10; i=i+1) {
@@ -187,10 +187,10 @@
 										<span class="icon major fa-chain"></span>
 										<h3>V shape</h3>
 										<p>
-													<canvas id="myCanvas" width="200" height="100" style="border:1px solid #d3d3d3;">
+													<canvas id="myCanvas4" width="200" height="100" style="border:1px solid #d3d3d3;">
 													Your browser does not support the HTML5 canvas tag.</canvas>
 													<script>
-														var c4 = document.getElementById("myCanvas");
+														var c4 = document.getElementById("myCanvas4");
 														var ctx4 = c4.getContext("2d");
 														var size=20;
 														for(var i = 0; i < 5; i=i+1) {
