--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Oracle IAM</h2>
+									<p>Worked on various SSO projects including cross domain SSO.</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
+						<!--
 						<section>
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
@@ -82,7 +83,7 @@
 								</div>
 							</div>
 						</section>
-					</section>
+					</section>-->
 
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
@@ -203,7 +204,7 @@
 										</p>
 								  	
 								</section>
-								<section>
+								<!--<section>
 									<span class="icon major fa-diamond"></span>
 									<h3>Aliquam urna dapibus</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
@@ -213,7 +214,7 @@
 								<li><a href="#" class="button">Learn more</a></li>
 							</ul>
 						</div>
-					</section>
+					</section>-->
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
