--- a/index.html
+++ b/index.html
@@ -204,17 +204,17 @@
 										</p>
 								  	
 								</section>
-								<!--<section>
+								<section>
 									<span class="icon major fa-diamond"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>More programs</h3>
+									<p>Need to build.</p>
 								</section>
 							</div>
 							<ul class="actions">
 								<li><a href="#" class="button">Learn more</a></li>
 							</ul>
 						</div>
-					</section>-->
+					</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
