--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
+											<span>12345 Somewhere Road <br />
 											<!--Nashville, TN 00000-0000<br />
 											USA</span>-->
 										</li>
@@ -254,8 +254,8 @@
 											<a href="#">pavanialam@gmail.com</a>
 										</li>
 										<li>
-											<h3>Phone</h3>
-										<!--	<span>(000) 000-0000</span>-->
+										<!--	<h3>Phone</h3>
+											<span>(000) 000-0000</span>-->
 										</li>
 										<li>
 											<h3>Social</h3>
