--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 								  	
 								</section>
 								<section>
-									<a href="#" target="_blank"><span class="icon major fa-code"></span></a>
+									<a href="#"><span class="icon major fa-code"></span></a>
 									<h3>More programs</h3>
 									<p>Need to build.</p>
 								</section>
