--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Oracle IAM</h2>
-									<p>Worked on various SSO projects including cross domain SSO.</p>
+									<h2>HTML</h2>
+									<p>Intrested in working with HTML,javascript,CSS</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
