--- a/index.html
+++ b/index.html
@@ -88,8 +88,14 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Javascript learnings</h2>
-							<p>Using the HTML5 references to draw graphics via scripting (usually JavaScript).</p>
+						<h2>Minor works</h2>
+							<!--<p>Using the HTML5 references to draw graphics via scripting (usually JavaScript).</p>-->
+							<ul class="actions">
+								<li><a href="#javascript" class="button icon fa-html5">Javascript</a></li>
+								<li><a href="#html" class="button icon fa-html5">HTML</a></li>
+								<li><a href="#embedded" class="button icon fa-lightbulb-o">Embedded</a></li>
+								<li><a href="#games" class="button icon fa-gamepad">Games</a></li>
+							</ul>
 							<div class="features">
 								<section>
 									
