--- a/index.html
+++ b/index.html
@@ -93,11 +93,9 @@
 							<ul class="actions">
 								<li><a href="#javascript" class="button icon fa-html5">Javascript</a></li>
 								<li><a href="#html" class="button icon fa-html5">HTML</a></li>
-								<li><a href="#embedded" class="button icon fa-lightbulb-o">Embedded</a></li>
-								<li><a href="#games" class="button icon fa-gamepad">Games</a></li>
 							</ul>
 							<div class="features">
-								<section>
+								<section id="javascript">
 									
 										<a href="http://js.do/pavani/80052" target="_blank"><span class="icon major fa-code"></span>
 										</a>
